tests/harness/errors/107_source_location_in_error.eu
# Test that errors carry source locations
bomb: 1 / 0
